--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ file.reference.DateChooser.jar=Plugins/jdatechooser/DateChooser.jar
 file.reference.groovy-all-2.0.1.jar=C:\\Users\\Alex\\Desktop\\librerias\\groovy-all-2.0.1.jar
 file.reference.hsqldb-1.8.0-10.jar=C:\\Users\\Alex\\Desktop\\librerias\\hsqldb-1.8.0-10.jar
 file.reference.iText-2.1.7.js2.jar=C:\\Users\\Alex\\Desktop\\librerias\\iText-2.1.7.js2.jar
-file.reference.jasperreports-5.6.0.jar=C:\\Users\\Alex\\Desktop\\librerias\\jasperreports-5.6.0.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\Developer\\Desktop\\librerias\\jasperreports-5.6.0.jar
 file.reference.joda-time-2.10.2.jar=src\\libs\\joda-time-2.10.2.jar
 file.reference.JTimeChooser_0.1.0.jar=Plugins/JTimeChooser_0.1.0.jar
 file.reference.mysql-connector-java-8.0.15.jar=../../mysql-connector-java-8.0.15/mysql-connector-java-8.0.15.jar
@@ -53,7 +53,6 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.joda-time-2.10.2.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jasperreports-5.6.0.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.appframework-1.0.3.jar}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
@@ -65,7 +64,8 @@ javac.classpath=\
     ${file.reference.hsqldb-1.8.0-10.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
     ${file.reference.substance.jar}:\
-    ${file.reference.swing-worker-1.1.jar}
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
